packages/kit/test/apps/basics/src/routes/load/invalidation/route/server/+layout.svelte
<script>
	/** @type {import('./$types').LayoutData} */
	export let data;
</script>

<h1>route.id: {data.route.id}</h1>
<slot />

<a href="/load/invalidation/route/server/a">/load/invalidation/route/server/a</a>
<a href="/load/invalidation/route/server/b">/load/invalidation/route/server/b</a>
